--- a/index.html
+++ b/index.html
@@ -12,111 +12,114 @@
 </head>
 <body>
 
-<section class="section section--navbar">
-    <div class="section__container">
-        <div class="section__row section__row--navbar">
-            <div class="section__col section__col--navbar">
-                <div class="logo">
-                    <img class="logo__img" src="design/logo.png" width="21px" height="30px" alt="Логотип компании Гросс Маркет" />
-                    <div class="logo__txt">Гросс Маркет</div>
-                </div>
-            </div> <!-- .section__col -->
-            <div class="section__col section__col--navbar">
-                <div class="call">
-                    <div class="phone">+7 (926) 433-14-16</div>
-                    <a href="#" class="link-btn">Заполнить анкету</a>
-                </div>
-            </div> <!-- .section__col -->
-        </div> <!-- .section__row -->
-    </div> <!-- .section__container -->
-</section> <!-- .section--navbar -->
+<header>
+    <section class="section section--navbar">
+        <div class="section__container">
+            <div class="section__row section__row--navbar">
+                <div class="section__col section__col--navbar">
+                    <div class="logo">
+                        <img class="logo__img" src="design/logo.png" width="21px" height="30px" alt="Логотип компании Гросс Маркет" />
+                        <div class="logo__txt">Гросс Маркет</div>
+                    </div>
+                </div> <!-- .section__col -->
+                <div class="section__col section__col--navbar">
+                    <div class="call">
+                        <div class="phone">+7 (926) 433-14-16</div>
+                        <a href="#" class="link-btn">Заполнить анкету</a>
+                    </div>
+                </div> <!-- .section__col -->
+            </div> <!-- .section__row -->
+        </div> <!-- .section__container -->
+    </section> <!-- .section--navbar -->
 
-<section class="section section--banner">
-    <div class="section__container">
-        <div class="section__row">
-            <div class="section__col">
-                <div class="banner">
-                    <div class="banner__h1">У тебя<br /> к этому талант</div>
-                    <img class="banner__img" src="design/banner.png" width="1110px" height="400px" alt="Баннер компании Гросс Маркет" />
-                    <div class="banner__btn-wrap clearfix">
-                        <button class="banner__btn banner__btn--left"><img class="banner__arrow banner__arrow--left" src="design/banner-arrow-left-gray.png" width="10px" height="10px" alt="" /></button>
-                        <button class="banner__btn banner__btn--right"><img class="banner__arrow banner__arrow--rigth" src="design/banner-arrow-right.png" width="10px" height="10px" alt="" /></button>
-                        <img class="banner__btn-line" src="design/banner-btn-line.png" width="1px" height="28px" alt="Баннер компании Гросс Маркет" />
+    <section class="section section--banner">
+        <div class="section__container">
+            <div class="section__row">
+                <div class="section__col">
+                    <div class="banner">
+                        <div class="banner__h1">У тебя<br /> к этому талант</div>
+                        <img class="banner__img" src="design/banner.png" width="1110px" height="400px" alt="Баннер компании Гросс Маркет" />
+                        <div class="banner__btn-wrap clearfix">
+                            <button class="banner__btn banner__btn--left"><img class="banner__arrow banner__arrow--left" src="design/banner-arrow-left-gray.png" width="10px" height="10px" alt="" /></button>
+                            <button class="banner__btn banner__btn--right"><img class="banner__arrow banner__arrow--rigth" src="design/banner-arrow-right.png" width="10px" height="10px" alt="" /></button>
+                            <img class="banner__btn-line" src="design/banner-btn-line.png" width="1px" height="28px" alt="Баннер компании Гросс Маркет" />
+                        </div>
                     </div>
-                </div>
-            </div> <!-- .section__col -->
-        </div> <!-- .section__row -->
-    </div> <!-- .section__container -->
-</section> <!-- .section--banner -->
+                </div> <!-- .section__col -->
+            </div> <!-- .section__row -->
+        </div> <!-- .section__container -->
+    </section> <!-- .section--banner -->
+</header>
 
-<section class="section section--vacancy">
-    <div class="section__container">
-        <div class="section__row">
-            <div class="section__col">
-                <div class="section--vacancy__head">
-                    <div class="vacancy-head">Вакансии в Гросс Маркете</div>
-                    <div class="vacancy__btn-wrap">
-                        <button class="vacancy__btn vacancy__btn--left"><img class="vacancy__arrow vacancy__arrow--left" src="design/banner-arrow-left.png" width="10px" height="10px" alt="" /></button>
-                        <button class="vacancy__btn vacancy__btn--right"><img class="vacancy__arrow vacancy__arrow--rigth" src="design/banner-arrow-right.png" width="10px" height="10px" alt="" /></button>
+<main>
+    <section class="section section--vacancy">
+        <div class="section__container">
+            <div class="section__row">
+                <div class="section__col">
+                    <div class="section--vacancy__head">
+                        <div class="vacancy-head">Вакансии в Гросс Маркете</div>
+                        <div class="vacancy__btn-wrap">
+                            <button class="vacancy__btn vacancy__btn--left"><img class="vacancy__arrow vacancy__arrow--left" src="design/banner-arrow-left.png" width="10px" height="10px" alt="" /></button>
+                            <button class="vacancy__btn vacancy__btn--right"><img class="vacancy__arrow vacancy__arrow--rigth" src="design/banner-arrow-right.png" width="10px" height="10px" alt="" /></button>
+                        </div>
                     </div>
-                </div>
-                <div class="vacancy">
-                    <div class="vacancy__item vacancy__item--tovaroved">
-                        <div class="vacancy__name">Товаровед</div>
-                        <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
+                    <div class="vacancy">
+                        <div class="vacancy__item vacancy__item--tovaroved">
+                            <div class="vacancy__name">Товаровед</div>
+                            <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
+                        </div>
+                        <div class="vacancy__item vacancy__item--voditel">
+                            <div class="vacancy__name">Водитель</div>
+                            <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
+                        </div>
+                        <div class="vacancy__item vacancy__item--pekar">
+                            <div class="vacancy__name">Пекарь</div>
+                            <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
+                        </div>
                     </div>
-                    <div class="vacancy__item vacancy__item--voditel">
-                        <div class="vacancy__name">Водитель</div>
-                        <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
-                    </div>
-                    <div class="vacancy__item vacancy__item--pekar">
-                        <div class="vacancy__name">Пекарь</div>
-                        <div class="vacancy__txt">Доставка товара по магазинам и гипермаркетам компании в обслуживаемом регионе</div>
-                    </div>
-                </div>
-            </div> <!-- .section__col -->
-        </div> <!-- .section__row -->
-    </div> <!-- .section__container -->
-</section> <!-- .section--vacancy -->
+                </div> <!-- .section__col -->
+            </div> <!-- .section__row -->
+        </div> <!-- .section__container -->
+    </section> <!-- .section--vacancy -->
 
-<section class="section section--instagram">
-    <div class="section__container">
-        <div class="section__row section__row--instagram">
-            <div class="section__col">
-                <div class="section--instagram__head">
-                    <div class="instagram-head">Мы в инстаграме</div>
-                </div>
+    <section class="section section--instagram">
+        <div class="section__container">
+            <div class="section__row section__row--instagram">
+                <div class="section__col">
+                    <div class="section--instagram__head">
+                        <div class="instagram-head">Мы в инстаграме</div>
+                    </div>
 
-                <div class="instagram">
-                    <div class="instagram__big">
-                        <img src="design/instagram-big.png" alt="" />
+                    <div class="instagram">
+                        <div class="instagram__big">
+                            <img src="design/instagram-big.png" alt="" />
+                        </div>
+                        <div class="instagram__small">
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                        </div>
                     </div>
-                    <div class="instagram__small">
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                    </div>
-                </div>
 
-                <div class="section--instagram__footer">
-                    <div class="instagram-small-hidden">
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
-                        <img src="design/instagram-small.png" alt="" />
+                    <div class="section--instagram__footer">
+                        <div class="instagram-small-hidden">
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                            <img src="design/instagram-small.png" alt="" />
+                        </div>
+                    
+                        <a href="#" class="link-btn btn--instagram">Показать еще</a>
                     </div>
-                
-                    <a href="#" class="link-btn btn--instagram">Показать еще</a>
-                </div>
-            </div> <!-- .section__col -->
-        </div> <!-- .section__row -->
-    </div> <!-- .section__container -->
-</section> <!-- .section--instagram -->
+                </div> <!-- .section__col -->
+            </div> <!-- .section__row -->
+        </div> <!-- .section__container -->
+    </section> <!-- .section--instagram -->
 
     <section class="section section--map">
         <div class="section__container">
@@ -132,7 +135,9 @@
             </div> <!-- .section__row -->
         </div> <!-- .section__container -->
     </section> <!-- .section--map -->
+</main>
 
+<footer>
     <section class="section section--footer">
         <div class="section__container">
             <div class="section__row section__row--footer">
@@ -146,14 +151,32 @@
                     <div class="social">
                         <div class="social__share">Поделиться</div>
                         <div class="social__ico">
-                            <img src="design/facebook.png" width="24px" height="24px" alt="Иконка Фейсбук" />
-                            <img src="design/vk.png" width="24px" height="24px" alt="Иконка ВК" />
+                            <img class="social__ico-item social__ico-facebook" src="design/facebook.png" width="24px" height="24px" alt="Иконка Фейсбук" />
+                            <img class="social__ico-item" src="design/vk.png" width="24px" height="24px" alt="Иконка ВК" />
                         </div>
                     </div>
                 </div> <!-- .section__col -->
             </div> <!-- .section__row -->
         </div> <!-- .section__container -->
-    </section> <!-- .section--navbar -->
+    </section> <!-- .section--footer -->
+
+    <section class="section section--copyright">
+        <div class="section__container">
+            <div class="section__row section__row--copyright">
+                <div class="section__col section__col--copyright">
+                    <div class="copy">
+                        &copy; Гросс маркет 2020
+                    </div>
+                </div> <!-- .section__col -->
+                <div class="section__col section__col--copyright">
+                    <div class="policy">
+                        Политика обработки персональных данных
+                    </div>
+                </div> <!-- .section__col -->
+            </div> <!-- .section__row -->
+        </div> <!-- .section__container -->
+    </section> <!-- .section--copyright -->
+</footer>
 
 </body>
 </html>
